--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,29 +1,71 @@
-*{
+* {
   box-sizing: border-box;
 }
+
 body {
-  background-color: #CEF6EC;
   font-family: Helvetica, Arial, sans-serif;
   margin: 0;
   line-height: 1.4;
-  color:#000;
+  color: #000;
 }
 
-ul{
-  padding: 30px;
+ul {
   list-style-type: none;
 }
 
-nav a{
+nav a {
   color: #000;
   text-decoration: none;
+  font-weight: bold;
+  text-transform: uppercase;
+  transition: color 0.4s ease;
+}
+
+nav a:hover{
+  color: #56c4af;
 }
 
 /*ID's in HTML werden in css zu einem # */
-#Startseite {
-  color: magenta;
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
-.container{
-  background: #DDC6F9;
+#navigation {
+  display: none;
+}
+
+#navigation.show {
+  display: block;
+}
+
+#burger {
+  border: none;
+  background-color: transparent;
+  outline: none;
+}
+
+#hero{
+  background-image: url(../img/intro.jpg);
+  height: 100vh;
+}
+@media (min-width: 1024px) {
+  #burger {
+    display: none;
+  }
+  #navigation{
+    display: block;
+  }
+  nav li{
+    float:left;
+    margin-left: 30px;
+  }
+
+  .container{
+    width: 90%;
+    margin: auto;
+  }
 }
