--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ nav a {
   transition: color 0.4s ease;
 }
 
-nav a:hover{
+nav a:hover {
   color: #56c4af;
 }
 
@@ -48,23 +48,78 @@ nav a:hover{
   outline: none;
 }
 
-#hero{
+#hero {
   background-image: url(../img/intro.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   height: 100vh;
 }
+
+.hero-box {
+  color: white;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%);
+  width: 100%;
+}
+
+.hero-box p {
+  font-size: 18px;
+}
+
+.card img {
+  width: 100%;
+}
+
+.card a{
+  text-decoration: none;
+  color: #000;
+}
+
+.card {
+  text-align: center;
+}
+
+.card p a{
+  color: #828282
+}
+
+.button {
+  display: inline-block;
+  padding: 15px;
+  background-color: white;
+  color: #374A67;
+  border: 1px solid #374A67;
+  border-color: #374A67;
+  text-decoration: none;
+  text-transform: uppercase;
+  border-radius: 4px;
+  font-weight: bold;
+  box-shadow: 4px 4px 6px 0px rgba(0, 0, 0, 0.6);
+  transition: 0.5s all ease;
+  margin-top: 30px;
+}
+
+.button:hover {
+  background-color: #374A67;
+  color: white;
+}
+
 @media (min-width: 1024px) {
   #burger {
     display: none;
   }
-  #navigation{
+  #navigation {
     display: block;
   }
-  nav li{
-    float:left;
+  nav li {
+    float: left;
     margin-left: 30px;
   }
-
-  .container{
+  .container {
     width: 90%;
     margin: auto;
   }
