--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,10 +81,14 @@ nav a:hover {
 
 .card {
   text-align: center;
+  border-radius: 4px;
+  box-shadow: 4px 4px 6px 0px rgba(0, 0, 0, 0.6);
+  overflow: hidden;
 }
 
 .card p a{
-  color: #828282
+  color: #828282;
+  padding: 2rem;
 }
 
 .button {
@@ -108,6 +112,29 @@ nav a:hover {
   color: white;
 }
 
+.card .button {
+  display: inline-block;
+  padding: 15px;
+  background-color: #374A67;
+  color: white;
+  border: 1px solid #374A67;
+  border-color: #white;
+  text-decoration: none;
+  text-transform: uppercase;
+  border-radius: 4px;
+  font-weight: bold;
+  box-shadow: 4px 4px 6px 0px rgba(0, 0, 0, 0.6);
+  transition: 0.5s all ease;
+  margin-top: 30px;
+  margin: 1rem;
+  display: block;
+}
+
+.card .button:hover {
+  background-color: white;
+  color: #374A67;
+}
+
 @media (min-width: 1024px) {
   #burger {
     display: none;
@@ -123,4 +150,5 @@ nav a:hover {
     width: 90%;
     margin: auto;
   }
+
 }
