--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ nav a:hover {
   justify-content: space-between;
   padding-left: 1rem;
   padding-right: 1rem;
+  flex-wrap: wrap;
 }
 
 #navigation {
@@ -74,7 +75,7 @@ nav a:hover {
   width: 100%;
 }
 
-.card a{
+.card a {
   text-decoration: none;
   color: #000;
 }
@@ -86,9 +87,9 @@ nav a:hover {
   overflow: hidden;
 }
 
-.card p a{
+.card p a {
   color: #828282;
-  padding: 2rem;
+  padding: 3rem;
 }
 
 .button {
@@ -135,6 +136,31 @@ nav a:hover {
   color: #374A67;
 }
 
+#rezepte h2 {
+  text-align: center;
+}
+
+.newsletter input{
+display: inline-inline-block;
+color: black;
+background: white;
+padding: 15px;
+border-radius: 4px;
+margin-top: 10px;
+border: 1px solid #374A67;
+}
+
+@media (min-width:768px) and (max-width:1023px) {
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .card {
+    margin: 1rem;
+    flex: 1 1 calc(50% - 2rem);
+  }
+}
+
 @media (min-width: 1024px) {
   #burger {
     display: none;
@@ -149,6 +175,27 @@ nav a:hover {
   .container {
     width: 90%;
     margin: auto;
+    display: flex;
+    flex-wrap: wrap;
   }
 
+  .card {
+    margin: 1rem;
+    flex: 1 1 calc(33.3333% - 2rem);
+  }
+}
+
+.widget {
+  background: #04122B;
+  text-align: center;
+  color: white;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+#nav-social {
+  font-size: 40px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  flex-wrap: wrap;
 }
