--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,26 @@
   box-sizing: border-box;
 }
 
+#header {
+  height: 60px;
+  position: fixed;
+  background: white;
+  width: 100%;
+  z-index: 100;
+}
+
+#header .container {
+  height: 100%;
+}
+
+#logo {
+  height: 40px;
+  width: auto;
+  margin-top: 10px;
+}
+
 body {
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Marvel', sans-serif;
   margin: 0;
   line-height: 1.4;
   color: #000;
@@ -41,6 +59,15 @@ nav a:hover {
 
 #navigation.show {
   display: block;
+  position: fixed;
+  left: 0;
+  top: 60px;
+  background: white;
+  z-index: 100;
+  width: 100%;
+  text-align: center;
+  height: calc(100vh - 60px);
+  line-height: 3;
 }
 
 #burger {
@@ -140,14 +167,27 @@ nav a:hover {
   text-align: center;
 }
 
-.newsletter input{
-display: inline-inline-block;
-color: black;
-background: white;
-padding: 15px;
-border-radius: 4px;
-margin-top: 10px;
-border: 1px solid #374A67;
+.newsletter input {
+  display: inline-inline-block;
+  color: black;
+  background: white;
+  padding: 15px;
+  border-radius: 4px;
+  margin-top: 10px;
+  border: 1px solid #374A67;
+}
+
+#nav-social ul {
+  display: flex;
+}
+
+#nav-social li {
+  padding: 10px;
+}
+
+footer .container {
+  flex-direction: column;
+  align-items: center;
 }
 
 @media (min-width:768px) and (max-width:1023px) {
@@ -178,11 +218,14 @@ border: 1px solid #374A67;
     display: flex;
     flex-wrap: wrap;
   }
-
   .card {
     margin: 1rem;
     flex: 1 1 calc(33.3333% - 2rem);
   }
+
+  footer .container {
+    flex-direction: row;
+
 }
 
 .widget {
@@ -194,7 +237,7 @@ border: 1px solid #374A67;
 }
 
 #nav-social {
-  font-size: 40px;
+  font-size: 30px;
   padding-bottom: 10px;
   padding-top: 10px;
   flex-wrap: wrap;
